<resources>
    <string name="app_name">Assistant Tutor</string>
    <string name="courses">Courses</string>
    <string name="students">Students</string>
    <string name="lessons">Lessons</string>

    <string name="emptyList">Empty list</string>
    <string name="enterCourseName">Enter course name:</string>
    <string name="enterCourseDesc">Enter course description:</string>
    <string name="enterTitlePlease">Please, enter title</string>
    <string name="errorCourseAdding">Error occurred - try again</string>
    <string name="saveCoursePlease">Please, save the course</string>
    <string name="duplicateDate">"The date now is in list "</string>
    <string name="pickDatePlease">Pick date for deleting</string>
    <string name="enterNewStudent">Enter new student name</string>
    <string name="yes">Yes</string>
    <string name="enterStudentNamePlease">Enter name of the student</string>
    <string name="cancel">Cancel</string>
    <string name="calendar">Calendar plan</string>
    <string name="error">Error occurred</string>
    <string name="noStudents">There are no students</string>
    <string name="errorStudentNowIs">The student is in list now</string>
    <string name="editCourse">Edit course</string>
    <string name="createCourse">Create course</string>
    <string name="studentsOnCourse">Students on course</string>
    <string name="planning">Calendar planning</string>
    <string name="enterThemaPlease">Enter thema please</string>
    <string name="course">Course</string>
    <string name="student">Student:</string>
    <string name="theme">Theme:</string>
    <string name="score">Score:</string>
    <string name="lesson">Lesson</string>
    <string name="cost">Cost:</string>
    <string name="addCoursePlease">Add new course please</string>
    <string name="addStudentToCourse">Pin a student on a course</string>
    <string name="addThemes">Plese, add at least one item to calendar plan of this course</string>
    <string name="avgScore">"Average score: "</string>
    <string name="nothingToSave">There are nothing to save</string>
    <string name="send">Send</string>
    <string name="preview">Preview</string>
    <string name="savedWhatNext">Report saved. What next?</string>
    <string name="report">REPORT</string>
    <string name="date">Date</string>
    <string name="theme2">Theme</string>
    <string name="score2">Score</string>
    <string name="cost2">Cost</string>
    <string name="enterYourLogin">Enter login:</string>
    <string name="enterYourPass">Enter password:</string>
    <string name="registration">Registration</string>
    <string name="authorization">Authorization</string>
    <string name="inputLogin">Input your login, please</string>
    <string name="inputPassword">Input you password, please</string>
    <string name="checkCredentials">Login or password invalid, try again</string>
</resources>