<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddLessonActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:orientation="vertical" app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent">



        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/main_wrapper_padding"
                android:id="@+id/txtStudent"
                android:textSize="@dimen/largeText"
                android:text="@string/student"/>


    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/main_wrapper_padding"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtTheme"
                android:textSize="@dimen/largeText"
                android:text="@string/theme"/>

        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:id="@+id/spnTheme"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/main_wrapper_padding"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/lesson_list_item_sub_padding"
                android:textSize="@dimen/largeText"
                android:text="@string/score"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:id="@+id/spnScore"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/main_wrapper_padding"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/lesson_list_item_sub_padding"
                android:textSize="@dimen/largeText"
                android:text="@string/cost"/>

        <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/npCost"/>

    </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton android:layout_width="wrap_content"
                                                                           android:layout_height="wrap_content"
                                                                           android:src="@drawable/ic_save"
                                                                           app:layout_constraintBottom_toBottomOf="parent"
                                                                           app:layout_constraintEnd_toEndOf="parent"
                                                                           android:id="@+id/btnSaveLesson"
                                                                           android:layout_marginBottom="16dp"
                                                                           android:layout_marginEnd="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>