<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditCourseActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:gravity="center"
                  android:padding="@dimen/main_wrapper_padding"
                  android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintBottom_toTopOf="@+id/btnSave">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/middle_size_padding"
            >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/enterCourseName"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:labelFor="@id/edtCourseTitle"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView"/>

        <EditText android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/edtCourseTitle"
                  android:minWidth="200dp"
                  android:inputType = "text"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/textView" android:minHeight="48dp"/>
        </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetTop="@dimen/middleMarginTop"
            android:padding="@dimen/middle_size_padding"
    >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/enterCourseDesc"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/edtCourseTitle" android:id="@+id/textView2"/>

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/edtDescription"
                  android:minWidth="200dp"
                  android:lines="2"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/textView2" android:minHeight="48dp"/>

    </LinearLayout>

        <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:drawableLeft="@drawable/ic_calendar"
                android:text="@string/calendar"
                android:padding="@dimen/middle_size_padding"
                android:id="@+id/btnCalendarPlanning" app:layout_constraintTop_toBottomOf="@+id/edtDescription"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:insetTop="@dimen/middleMarginTop"/>


        <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:drawableLeft="@drawable/ic_groups"
                android:padding="@dimen/middle_size_padding"
                android:insetTop="@dimen/middleMarginTop"
                android:text="@string/students"
                android:id="@+id/btnStudentsOnCourse" app:layout_constraintTop_toBottomOf="@+id/btnCalendarPlanning"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton android:layout_width="wrap_content"
                                                                           android:layout_height="wrap_content"
                                                                           android:src="@drawable/ic_save"
                                                                           app:layout_constraintBottom_toBottomOf="parent"
                                                                           app:layout_constraintEnd_toEndOf="parent"
                                                                           android:id="@+id/btnSave"
                                                                           android:layout_marginBottom="16dp"
                                                                           android:layout_marginEnd="16dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton android:layout_width="wrap_content"
                                                                           android:layout_height="wrap_content"
                                                                           android:src="@drawable/ic_delete"
                                                                           app:layout_constraintBottom_toBottomOf="parent"
                                                                           android:id="@+id/btnDelete"
                                                                           android:layout_marginBottom="16dp"
                                                                           app:layout_constraintStart_toStartOf="parent"
                                                                           android:layout_marginStart="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>