<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/app_name"
              android:textSize="36sp"

              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
              android:layout_marginTop="32dp" app:textAllCaps="false"
              android:textAppearance="@style/TextAppearance.AppCompat.Large" android:id="@+id/textView3"/>

    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
               android:src="@drawable/ic_account_circle"
               android:minWidth="200dp"
               android:minHeight="200dp"
               android:scaleType="fitCenter"
               app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
               android:id="@+id/imageView"/>

    <LinearLayout android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:gravity="center"
                  android:padding="@dimen/main_wrapper_padding"
                  android:layout_height="wrap_content"
                  app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintBottom_toTopOf="@+id/btnInputAction"
                  app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/middle_size_padding"
        >
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/enterYourLogin"
                      app:layout_constraintEnd_toEndOf="parent"
                      android:labelFor="@id/edtLogin"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView"/>

            <EditText android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/edtLogin"
                      android:inputType="textPersonName"
                      android:minWidth="200dp"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toBottomOf="@+id/textView" android:minHeight="48dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/middle_size_padding"
        >
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/enterYourPass"
                      app:layout_constraintEnd_toEndOf="parent"
                      android:labelFor="@id/edtPass"
                      app:layout_constraintStart_toStartOf="parent"
                      />

            <EditText android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/edtPass"
                      android:minWidth="200dp"
                      android:inputType="textPassword"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toBottomOf="@+id/textView" android:minHeight="48dp"/>
        </LinearLayout>

    </LinearLayout>


    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/btnInputAction" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>